--- a/글로벌 뉴스/main_window.ui
+++ b/글로벌 뉴스/main_window.ui
@@ -2,194 +2,98 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>785</width>
-    <height>685</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
-  <property name="cursor">
-   <cursorShape>ArrowCursor</cursorShape>
-  </property>
   <property name="windowTitle">
-   <string>관심종목</string>
+   <string>글로벌 주식 최신 뉴스 검색</string>
+  </property>
+  <property name="windowOpacity">
+   <double>1.000000000000000</double>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QLineEdit" name="StockEdit">
     <property name="geometry">
      <rect>
-      <x>17</x>
-      <y>30</y>
-      <width>751</width>
-      <height>641</height>
+      <x>140</x>
+      <y>10</y>
+      <width>171</width>
+      <height>31</height>
      </rect>
     </property>
-    <property name="minimumSize">
-     <size>
-      <width>751</width>
-      <height>0</height>
-     </size>
+    <property name="whatsThis">
+     <string/>
     </property>
-    <property name="maximumSize">
-     <size>
-      <width>751</width>
-      <height>16777215</height>
-     </size>
+    <property name="text">
+     <string/>
     </property>
-    <property name="contextMenuPolicy">
-     <enum>Qt::DefaultContextMenu</enum>
+   </widget>
+   <widget class="QPushButton" name="searchBtn">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>10</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
     </property>
-    <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
+    <property name="text">
+     <string>검색</string>
     </property>
-    <property name="autoFillBackground">
-     <bool>true</bool>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">selection-background-color: rgb(189, 189, 189);</string>
+    <property name="font">
+     <font>
+      <family>돋움</family>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
-    <property name="gridStyle">
-     <enum>Qt::SolidLine</enum>
+    <property name="text">
+     <string>종목명 or 코드 입력</string>
     </property>
-    <property name="sortingEnabled">
-     <bool>true</bool>
+    <property name="textFormat">
+     <enum>Qt::RichText</enum>
     </property>
-    <property name="rowCount">
-     <number>0</number>
+   </widget>
+   <widget class="QColumnView" name="columnView">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>60</y>
+      <width>381</width>
+      <height>491</height>
+     </rect>
     </property>
-    <property name="columnCount">
-     <number>5</number>
-    </property>
-    <attribute name="horizontalHeaderVisible">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="horizontalHeaderCascadingSectionResizes">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="horizontalHeaderDefaultSectionSize">
-     <number>125</number>
-    </attribute>
-    <attribute name="horizontalHeaderHighlightSections">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="horizontalHeaderMinimumSectionSize">
-     <number>0</number>
-    </attribute>
-    <attribute name="horizontalHeaderStretchLastSection">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="verticalHeaderVisible">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="verticalHeaderCascadingSectionResizes">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="verticalHeaderDefaultSectionSize">
-     <number>0</number>
-    </attribute>
-    <attribute name="verticalHeaderHighlightSections">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="verticalHeaderMinimumSectionSize">
-     <number>0</number>
-    </attribute>
-    <column>
-     <property name="text">
-      <string>티커</string>
-     </property>
-     <property name="font">
-      <font>
-       <family>Constantia</family>
-       <weight>75</weight>
-       <italic>false</italic>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="background">
-      <color>
-       <red>208</red>
-       <green>208</green>
-       <blue>208</blue>
-      </color>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>종목명</string>
-     </property>
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="background">
-      <color alpha="0">
-       <red>198</red>
-       <green>198</green>
-       <blue>198</blue>
-      </color>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>국가</string>
-     </property>
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="background">
-      <color>
-       <red>198</red>
-       <green>198</green>
-       <blue>198</blue>
-      </color>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>News Title</string>
-     </property>
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="background">
-      <color>
-       <red>198</red>
-       <green>198</green>
-       <blue>198</blue>
-      </color>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>시간</string>
-     </property>
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="background">
-      <color>
-       <red>198</red>
-       <green>198</green>
-       <blue>198</blue>
-      </color>
-     </property>
-    </column>
    </widget>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
